# casper-client-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci-casper-client-rs.yml  nightly-scheduled-test.yml  publish-casper-client-deb.yml  publish-casper-client-rpm.yml  publish-casper-client-rs.yml  publish-dev-repo.yml
ci/: publish_rpm_to_repo.sh
examples/ffi/: CMakeLists.txt  README.md
examples/ffi/src/: get_auction_info.c  put_deploy.c
examples/ffi/tests/: ffi_tests.c
lib/: cli.rs  crypto.rs  deploy.rs  error.rs  json_rpc.rs  keygen.rs  lib.rs  output_kind.rs  parsing.rs  rpc.rs  rpcs.rs  transfer_target.rs  types.rs  validation.rs  verbosity.rs  verification.rs  verification_types.rs
lib/cli/: cl_type.rs  deploy.rs  deploy_str_params.rs  dictionary_item_str_params.rs  error.rs  global_state_str_params.rs  json_args.rs  parse.rs  payment_str_params.rs  purse_identifier_str_params.rs  session_str_params.rs  simple_args.rs  tests.rs  transaction.rs  transaction_builder_params.rs  transaction_str_params.rs
lib/cli/json_args/: error.rs  help.rs
lib/cli/simple_args/: help.rs
lib/crypto/: asymmetric_key.rs  asymmetric_key_ext.rs  error.rs
lib/json_rpc/: call.rs  id.rs  success_response.rs
lib/rpcs/: common.rs  results.rs  v1_4_5.rs  v1_5_0.rs  v1_6_0.rs  v2_0_0.rs
lib/rpcs/v1_4_5/: get_account.rs  get_auction_info.rs  get_balance.rs  get_block.rs  get_block_transfers.rs  get_chainspec.rs  get_deploy.rs  get_dictionary_item.rs  get_era_info.rs  get_node_status.rs  get_peers.rs  get_state_root_hash.rs  get_validator_changes.rs  list_rpcs.rs  put_deploy.rs  query_global_state.rs  speculative_exec.rs
lib/rpcs/v1_5_0/: get_account.rs  get_chainspec.rs  get_deploy.rs  get_era_summary.rs  get_node_status.rs  query_balance.rs  speculative_exec.rs
lib/rpcs/v1_6_0/: get_account.rs  query_global_state.rs
lib/rpcs/v2_0_0/: get_block.rs  get_deploy.rs  get_dictionary_item.rs  get_entity.rs  get_node_status.rs  get_reward.rs  get_transaction.rs  put_transaction.rs  query_balance.rs  query_balance_details.rs  speculative_exec.rs  speculative_exec_transaction.rs
lib/types/: account.rs  auction_state.rs  block.rs  contract.rs  contract_package.rs  deploy.rs  deploy_execution_info.rs  era_end.rs  executable_deploy_item.rs  execution_result.rs  json_block_with_signatures.rs  legacy_execution_result.rs  named_key.rs  proof.rs  stored_value.rs  time_diff.rs  timestamp.rs
lib/types/auction_state/: bid.rs  delegator.rs  era_validators.rs  validator_weight.rs
lib/types/block/: v1.rs  v2.rs
src/: account_address.rs  block.rs  command.rs  common.rs  deploy.rs  docs.rs  generate_completion.rs  get_account.rs  get_account_info.rs  get_auction_info.rs  get_balance.rs  get_chainspec.rs  get_dictionary_item.rs  get_entity.rs  get_era_info.rs  get_era_info_by_switch_block.rs  get_era_summary.rs  get_node_status.rs  get_peers.rs  get_reward.rs  get_state_hash.rs  get_state_root_hash.rs  get_validator_changes.rs  keygen.rs  list_rpcs.rs  main.rs  query_balance.rs  query_balance_details.rs  query_global_state.rs  transaction.rs  verify_contract.rs
src/block/: get.rs  transfers.rs
src/deploy/: creation_common.rs  get.rs  list.rs  make.rs  make_transfer.rs  put.rs  send.rs  sign.rs  transfer.rs
src/transaction/: creation_common.rs  get.rs  make.rs  put.rs  send.rs  sign.rs
tests/: integration_test.rs
