[package]
name = "casper-client"
version = "2.0.0" # when updating, also update 'html_root_url' in lib.rs
authors = ["Marc Brinkmann <marc@casperlabs.io>", "Fraser Hutchison <fraser@casperlabs.io>", "Zachary Showalter <zach@casperlabs.io>"]
edition = "2021"
description = "A client library and binary for interacting with the Casper network"
documentation = "https://docs.rs/casper-client"
readme = "README.md"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-ecosystem/casper-client-rs"
license = "Apache-2.0"

[lib]
name = "casper_client"
path = "lib/lib.rs"

[[bin]]
name = "casper-client"
path = "src/main.rs"
doc = false

[features]
default = ["async-trait", "clap", "clap_complete", "tokio", "std-fs-io"]
std-fs-io = ["casper-types/std-fs-io"]

[dependencies]
async-trait = { version = "0.1.59", default-features = false, optional = true }
base16 = "0.2.1"
base64 = { version = "0.22.1", default-features = false }
bytes = { version = "1.6.0", default-features = false }
casper-hashing = "3.0.0"
casper-types = { version = "5.0.0", features = ["std"] }
clap = { version = "4", features = [
  "cargo",
  "deprecated",
  "wrap_help",
], optional = true }
clap_complete = { version = "4", default-features = false, optional = true }
flate2 = "1.0.28"
hex-buffer-serde = "0.4.0"
humantime = "2"
itertools = "0.11.0"
jsonrpc-lite = "0.6.0"
num-traits = "0.2.15"
once_cell = "1"
openapi = { path = "../Casper-SCVS-Validator/openapi" }
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json"] }
schemars = "0.8.13"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-map-to-array = "1.1.1"
serde_json = { version = "1", features = ["preserve_order"] }
tar = { version = "0.4.41", default-features = false }
thiserror = "1.0.50"
tokio = { version = "1.23.0", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
], optional = true }
uint = "0.9.5"

[dev-dependencies]
tempfile = "3.7.1"

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["git", "git2"] }

[patch.crates-io]
casper-hashing = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "feat-2.0" }

[package.metadata.deb]
features = ["vendored-openssl"]
revision = "0"
assets = [["./target/release/casper-client", "/usr/bin/casper-client", "755"], ]
extended-description = """
Package for Casper Client to connect to Casper Node.

For information on using package, see https://github.com/CasperLabs/casper-node
"""

[package.metadata.deb.variants.bionic]
name = "casper-client"
revision = "0+bionic"

[package.metadata.deb.variants.focal]
name = "casper-client"
revision = "0+focal"

[package.metadata.rpm]
package = "casper-client"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
casper-client = { path = "/usr/bin/casper-client" }
